<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/my_schedule_list"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/calender_id"
                android:layout_width="27dp"
                android:layout_height="22dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/icon_calender" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/list_month_id"
                android:layout_width="27dp"
                android:layout_height="22dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/icon_message" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/month_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/month_picker"
                android:layout_margin="4dp"
                android:shadowColor="@color/light_black"
                android:textColor="@color/white"
                android:background="@color/frameBackground"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_picker"
                android:layout_margin="4dp"
                android:textColor="@color/white"
                android:shadowColor="@color/light_black"
                android:background="@color/frameBackground"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/select_month_or_select_date_n_no_data_found"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>