<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/my_schedule"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/calender_id"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/icon_calender" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/list_month_id"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_margin="5dp"
                android:layout_marginEnd="7dp"
                android:src="@drawable/icon_message" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:orientation="horizontal">

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:background="@color/background"
                    android:dateTextAppearance="@style/CalenderViewDateCustomText"
                    android:theme="@style/CalenderViewCustom"
                    android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="8"
                    android:background="@drawable/circle"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="7dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/month_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="4dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_to_be_done"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/today" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/current_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/circle" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/circle" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/circle" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/circle" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/circle" />


                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/light_black" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/task_message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/weekly_meeting"
                            android:textColor="@color/black" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/date_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:gravity="start"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginTop="3dp"
                                android:layout_marginEnd="2dp"
                                android:background="@drawable/icon_location"
                                app:tint="@color/light_black" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:gravity="start"
                                android:text="@string/weekly_meeting" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="101dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:background="@drawable/image" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/task_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardElevation="5dp"
            android:layout_marginTop="4dp"
            android:visibility="gone"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/plan_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/plan_to_do"
                    android:textStyle="bold"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="10dp"
                    android:scrollbars="vertical"
                    android:visibility="visible" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/no_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/create_a_task_or_no_data_found"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@android:color/white"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>