<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cross_mark"
        android:padding="12dp"
        android:elevation="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="end"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btnDialog"
        app:cardCornerRadius="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:gravity="start"
                android:text="Create Task"
                android:padding="12dp"
                android:textSize="20dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="7dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_title"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/rectangle_boarder_grey"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/task_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:textColorHint="@color/frameBackground"
                        android:backgroundTint="@color/white"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        android:maxLength="25"
                        android:textStyle="normal" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="7dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/rectangle_boarder_grey"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/task_description"
                        android:layout_width="match_parent"
                        android:layout_height="105dp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:textColorHint="@color/frameBackground"
                        android:backgroundTint="@color/white"
                        android:gravity="start"
                        android:inputType="textCapSentences|textMultiLine"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="7dp"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/rectangle_boarder_grey"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/task_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Select Date"
                        android:textSize="12sp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="5dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_down_24"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fill_brown_btn"
                android:text="submit"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="3dp"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>